ui fixes for alignment issues on the category page

--- a/style.css
+++ b/style.css
@@ -534,6 +534,7 @@ input[class=email-submit] {
 
 .category-subscribe {
     text-align: center;
+    margin-top: 20%;
 }
 
 .category-submit-btn {
@@ -851,203 +852,256 @@ input[class=email-submit] {
     .email-form {
         text-align: center;
     }
-    /* ********** about page and recommend page ***************** */
-    .about-card,
-    .recommend-card {
-        display: block;
-        padding-top: 5%;
-        width: 100%;
-        margin: 0;
-        margin-top: 30%;
-        font-size: small;
-    }
-    /* re-size the heading for the recommned page */
-    .form h1 {
-        letter-spacing: 0px;
-        font-size: medium;
-    }
-    /***************category-help page********************  */
-    .wilderness-fly img {
-        display: none;
-    }
-    .category-fly {
-        text-align: center;
-        margin-left: 0px;
-        margin-top: 5%;
-    }
-    .category-fly img {
-        height: 100px;
-        width: 100px;
-    }
-    .category-heading {
-        margin-top: 10%;
-    }
-    .category-heading h1 {
-        font-size: medium;
-        letter-spacing: 0px;
-        max-width: 90%;
+    .category-subscribe {
         text-align: left;
-        font-weight: 300;
-        padding-bottom: 14px;
-    }
-    .category-header-sec {
-        padding-bottom: 50px;
+        padding-bottom: 20px;
+        margin-top: 0;
     }
 }
 
 
-/* styling the iphone 5 screen for the index page */
+/* ********** about page and recommend page ***************** */
 
+.about-card,
+.recommend-card {
+    display: block;
+    padding-top: 5%;
+    width: 100%;
+    margin: 0;
+    margin-top: 30%;
+    font-size: small;
+}
+
+
+/* re-size the heading for the recommned page */
+
+.form h1 {
+    letter-spacing: 0px;
+    font-size: medium;
+}
+
+
+/***************category-help page********************  */
+
+.wilderness-fly img {
+    display: none;
+}
+
+.category-fly {
+    text-align: center;
+    margin-left: 0px;
+    margin-top: 5%;
+}
+
+.category-fly img {
+    height: 100px;
+    width: 100px;
+}
+
+.category-heading {
+    margin-top: 10%;
+}
+
+.category-heading h1 {
+    font-size: medium;
+    letter-spacing: 0px;
+    max-width: 90%;
+    text-align: left;
+    font-weight: 300;
+    padding-bottom: 14px;
+}
+
+.category-header-sec {
+    padding-bottom: 50px;
+}
+
+
+}
+
+/* styling the iphone 5 screen for the index page */
 @media only screen and (max-width: 320px) {
     .index-heading {
         margin-top: 70%;
     }
+    
     .categories {
         height: 178vh;
     }
 }
 
-
 /* 
   ##Device = Low Resolution Tablets, Mobiles (Landscape)
   ##Screen = B/w 481px to 767px
 */
-
 @media only screen and (min-width: 481px) and (max-width: 768px) {
     /***************category-help page********************  */
+    
     .category-heading h1 {
         font-family: 'Roboto', sans-serif;
         font-size: large;
         margin-top: 20%;
         letter-spacing: 0px;
     }
+    
     .category-heading {
         width: 100%;
         margin-top: 0px;
     }
+    
     .category-fly {
         margin: 0;
     }
+    
     .wilderness-fly img {
         height: 200px;
         width: 200px;
     }
+    
     .category-header-sec {
         padding-bottom: 0px;
     }
+    
     .category-desc {
         font-size: medium;
     }
     /* ***************HOME PAGE******************** */
+    
     a {
         font-size: large;
     }
+    
     .bottom-word {
         font-size: 66px;
     }
+    
     .header-img img {
         width: 200px;
         height: 200px;
     }
+    
     .nav-description {
         font-size: large;
     }
+    
     .paper-cols {
         width: 50%;
     }
+    
     .paper h4 {
         padding-bottom: 10px;
         font-size: x-large;
     }
+    
     .tab button {
         font-size: 20px;
     }
     /* ************inex page ****************/
+    
     .index-heading {
         font-size: 62px;
         line-height: 70px;
     }
 }
 
-
 /* larger size tablets  */
-
 @media only screen and (min-width:769px) and (max-width: 1024px) {
     /***************category-help page********************  */
+    
     .category-heading h1 {
         font-family: 'Roboto', sans-serif;
         font-size: x-large;
         margin-top: 20%;
         letter-spacing: 0px;
     }
+    
     .category-heading {
         width: 100%;
         margin-top: 0px;
     }
+    
     .category-fly {
         margin: 0;
     }
+    
     .wilderness-fly img {
         height: 300px;
         width: 300px;
     }
+    
     .category-fly img {
         height: 300px;
         width: 300px;
     }
+    
     .category-header-sec {
         padding-bottom: 0px;
     }
+    
     .category-desc {
         font-size: x-large;
     }
+    
     .category-content h3 {
         font-size: xx-large;
     }
+    
     .tablink {
         font-size: x-large;
     }
+    
     .tabcontent p {
         font-size: x-large;
     }
+    
     ul.topnav li a {
         font-size: x-large;
     }
+    
     .article-container ul li a {
         font-size: x-large;
     }
     /* ***************HOME PAGE******************** */
+    
     a {
         font-size: x-large;
     }
+    
     .bottom-word {
         font-size: 77px;
     }
+    
     .header-img img {
         width: 300px;
     }
+    
     .nav-description {
         font-size: x-large;
     }
+    
     .paper-cols {
         width: 50%;
     }
+    
     .paper h4 {
         padding-bottom: 20px;
         font-size: xx-large;
     }
+    
     .tab button {
         font-size: 30px;
     }
     /* ***********Recommend page and about******************** */
+    
     .contact-input label,
     .story p {
         font-size: x-large;
     }
     /* ***************index page*************** */
+    
     .index-text {
         font-size: x-large;
     }
+    
     .email-form {
         font-size: x-large;
     }
